# envmask

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: HANDOFF.md  PRE_RELEASE_CHECKLIST.md  PRODUCTION_READINESS.md  PUBLISHING.md  README.md  ROADMAP.md  SETUP.md  architecture.md
scripts/: example.py  install-claude-hook.sh
src/envguard/: __init__.py  cli.py  masker.py
src/envguard/hook/: __init__.py  __main__.py
src/envmask/: __init__.py  cli.py
src/envmask/hook/: __init__.py  __main__.py
tests/: __init__.py  test_masker.py
