[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envmask"
version = "0.1.0"
description = "Mask secrets in .env files for safe LLM inspection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Will Pike", email = "will@khanpikehome.com" }]
keywords = ["environment", "secrets", "masking", "LLM", "Claude", "security"]
dependencies = ["loguru>=0.7.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/pike00/envmask"
Repository = "https://github.com/pike00/envmask.git"
Issues = "https://github.com/pike00/envmask/issues"
Documentation = "https://github.com/pike00/envmask/blob/main/docs/"
Roadmap = "https://github.com/pike00/envmask/blob/main/docs/ROADMAP.md"
Publishing = "https://github.com/pike00/envmask/blob/main/docs/PUBLISHING.md"

[project.scripts]
envmask = "envmask.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/envmask"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
